@@ -25,7 +25,6 @@ import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.toolkit.SqlHelper;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.annotation.Resource;
 import lombok.RequiredArgsConstructor;
@@ -36,7 +35,6 @@ import org.apache.poi.EncryptedDocumentException;
 import org.apache.poi.ss.usermodel.*;
 
 import org.springframework.beans.BeanUtils;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
@@ -196,7 +194,6 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
     @Value("${welding.nonmetal-project-id}")
     private Long nonmetalProjectId;
 
-
     @Override
     public PageResp<ExamPlanResp> page(ExamPlanQuery query, PageQuery pageQuery) {
         QueryWrapper<ExamPlanDO> queryWrapper = this.buildQueryWrapper(query);
@@ -207,7 +204,7 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         super.sort(queryWrapper, pageQuery);
 
         IPage<ExamPlanDetailResp> page = baseMapper.selectExamPlanPage(new Page<>(pageQuery.getPage(), pageQuery
-                .getSize()), queryWrapper);
+            .getSize()), queryWrapper);
 
         page.getRecords().forEach(item -> item.setStatusString(PlanConstant.getStatusString(item.getStatus())));
 
@@ -241,7 +238,7 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
 
         // 禁止计划重名
         ExamPlanDO examPlanName = baseMapper.selectOne(new QueryWrapper<ExamPlanDO>().eq("exam_plan_name", req
-                .getExamPlanName()).eq("is_deleted", 0).eq("plan_type", req.getPlanType()));
+            .getExamPlanName()).eq("is_deleted", 0).eq("plan_type", req.getPlanType()));
         ValidationUtils.throwIfNotNull(examPlanName, "考试计划名称已存在");
 
         // 1. 构建对象
@@ -468,29 +465,27 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
             return item.getEnrollStatus().equals(EnrollStatusConstant.SIGNED_UP);
         }).toList();
 
-
         // 2. 检查是否有正在考试的考生
         Set<Integer> validStatuses = Set
-                .of(EnrollStatusConstant.SIGNED_IN, EnrollStatusConstant.IN_PROGRESS, EnrollStatusConstant.RETAKE_IN_PROGRESS);
+            .of(EnrollStatusConstant.SIGNED_IN, EnrollStatusConstant.IN_PROGRESS, EnrollStatusConstant.RETAKE_IN_PROGRESS);
 
         List<Long> signedInList = signedUpList.stream()
-                .filter(e -> validStatuses.contains(e.getExamStatus()))
-                .map(EnrollDO::getId)
-                .toList();
+            .filter(e -> validStatuses.contains(e.getExamStatus()))
+            .map(EnrollDO::getId)
+            .toList();
         ValidationUtils.throwIfNotEmpty(signedInList, "仍有考生正在考试，无法结束考试，请稍后再试");
 
         // 3. 找出未签到 → 改成缺勤（ABSENT）
         List<Long> notSignedInIds = signedUpList.stream()
-                .filter(e -> EnrollStatusConstant.NOT_SIGNED_IN.equals(e.getExamStatus()))
-                .map(EnrollDO::getId)
-                .toList();
+            .filter(e -> EnrollStatusConstant.NOT_SIGNED_IN.equals(e.getExamStatus()))
+            .map(EnrollDO::getId)
+            .toList();
 
         if (!notSignedInIds.isEmpty()) {
             // 1. 更新报名状态
-            enrollMapper.update(new LambdaUpdateWrapper<EnrollDO>()
-                    .in(EnrollDO::getId, notSignedInIds)
-                    .set(EnrollDO::getExamStatus, EnrollStatusConstant.ABSENT)
-                    .set(EnrollDO::getEnrollStatus, EnrollStatusConstant.COMPLETED));
+            enrollMapper.update(new LambdaUpdateWrapper<EnrollDO>().in(EnrollDO::getId, notSignedInIds)
+                .set(EnrollDO::getExamStatus, EnrollStatusConstant.ABSENT)
+                .set(EnrollDO::getEnrollStatus, EnrollStatusConstant.COMPLETED));
 
             // 2. 查询是否有实操/道路考试
             ExamPresenceDTO examPlanOperAndRoadDTO = examRecordsMapper.hasOperationOrRoadExam(planId, roadExamTypeId);
@@ -504,9 +499,13 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
                 examRecordsDO.setCandidateId(item.getUserId());
                 examRecordsDO.setExamScores(0);
                 examRecordsDO.setOperScores(hasOper ? 0 : ExamRecordConstants.PASSING_SCORE);
-                examRecordsDO.setOperInputStatus(hasOper ? ExamScoreEntryStatusEnum.NO_ENTRY.getValue() : ExamScoreEntryStatusEnum.ENTERED.getValue());
+                examRecordsDO.setOperInputStatus(hasOper
+                    ? ExamScoreEntryStatusEnum.NO_ENTRY.getValue()
+                    : ExamScoreEntryStatusEnum.ENTERED.getValue());
                 examRecordsDO.setRoadScores(0);
-                examRecordsDO.setRoadInputStatus(hasRoad ? ExamScoreEntryStatusEnum.NO_ENTRY.getValue() : ExamScoreEntryStatusEnum.ENTERED.getValue());
+                examRecordsDO.setRoadInputStatus(hasRoad
+                    ? ExamScoreEntryStatusEnum.NO_ENTRY.getValue()
+                    : ExamScoreEntryStatusEnum.ENTERED.getValue());
                 examRecordsDO.setAttemptType(ExamRecordAttemptEnum.FIRST.getValue());
                 examRecordsDO.setExamResultStatus(ExamResultStatusEnum.FAILED.getValue());
                 return examRecordsDO;
@@ -523,16 +522,15 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
             }
         }
 
-
         // 4. 找出已交卷 → 改成已完成（COMPLETED）
         List<Long> submittedIds = signedUpList.stream()
-                .filter(e -> EnrollStatusConstant.SUBMITTED.equals(e.getExamStatus()))
-                .map(EnrollDO::getId)
-                .toList();
+            .filter(e -> EnrollStatusConstant.SUBMITTED.equals(e.getExamStatus()))
+            .map(EnrollDO::getId)
+            .toList();
 
         if (!submittedIds.isEmpty()) {
             enrollMapper.update(new LambdaUpdateWrapper<EnrollDO>().in(EnrollDO::getId, submittedIds)
-                    .set(EnrollDO::getEnrollStatus, EnrollStatusConstant.COMPLETED));
+                .set(EnrollDO::getEnrollStatus, EnrollStatusConstant.COMPLETED));
         }
 
         // 5. 更新考试计划状态 → 已结束
@@ -543,25 +541,22 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         // 6. 更新监考员状态 → 待审核
         LambdaUpdateWrapper<PlanInvigilateDO> invUpdate = new LambdaUpdateWrapper<>();
         invUpdate.eq(PlanInvigilateDO::getExamPlanId, planId)
-                .eq(PlanInvigilateDO::getInvigilatorId, TokenLocalThreadUtil.get().getUserId())
-                .set(PlanInvigilateDO::getInvigilateStatus, InvigilateStatus.COMPLETED.getCode());
+            .eq(PlanInvigilateDO::getInvigilatorId, TokenLocalThreadUtil.get().getUserId())
+            .set(PlanInvigilateDO::getInvigilateStatus, InvigilateStatus.COMPLETED.getCode());
         planInvigilateMapper.update(invUpdate);
-
 
         //  批量查询用户信息
         List<Long> userIds = enrollList.stream().map(EnrollDO::getUserId).distinct().toList();
         List<UserDO> userList = userMapper.selectByIds(userIds);
 
         Map<Long, String> userIdToUsername = userList.stream()
-                .collect(Collectors.toMap(UserDO::getId, UserDO::getUsername));
+            .collect(Collectors.toMap(UserDO::getId, UserDO::getUsername));
 
         // 3. 按班级分组 enroll
         Map<Long, List<String>> classIdToIdCards = enrollList.stream()
-                .filter(enroll -> StrUtil.isNotBlank(userIdToUsername.get(enroll.getUserId())))
-                .collect(Collectors.groupingBy(
-                        EnrollDO::getClassId,
-                        Collectors.mapping(enroll -> userIdToUsername.get(enroll.getUserId()), Collectors.toList())
-                ));
+            .filter(enroll -> StrUtil.isNotBlank(userIdToUsername.get(enroll.getUserId())))
+            .collect(Collectors.groupingBy(EnrollDO::getClassId, Collectors.mapping(enroll -> userIdToUsername
+                .get(enroll.getUserId()), Collectors.toList())));
 
         // 4. 批量更新 WorkerApplyDO
         for (Map.Entry<Long, List<String>> entry : classIdToIdCards.entrySet()) {
@@ -571,21 +566,16 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
             if (CollUtil.isNotEmpty(idCards)) {
                 LambdaUpdateWrapper<WorkerApplyDO> updateWrapper = new LambdaUpdateWrapper<>();
                 updateWrapper.eq(WorkerApplyDO::getClassId, classId)
-                        .in(WorkerApplyDO::getIdCardNumber, idCards)
-                        .set(WorkerApplyDO::getStatus, WorkerApplyReviewStatusEnum.ALTER_EXAM.getValue());
+                    .in(WorkerApplyDO::getIdCardNumber, idCards)
+                    .set(WorkerApplyDO::getStatus, WorkerApplyReviewStatusEnum.ALTER_EXAM.getValue());
                 workerApplyMapper.update(null, updateWrapper);
             }
         }
 
         // 4. 按班级分组 candidateId（用于更新 ted_org_class_candidate）
         Map<Long, List<Long>> classIdToCandidateIds = enrollList.stream()
-                .collect(Collectors.groupingBy(
-                        EnrollDO::getClassId,
-                        Collectors.mapping(
-                                EnrollDO::getUserId,
-                                Collectors.toList()
-                        )
-                ));
+            .collect(Collectors.groupingBy(EnrollDO::getClassId, Collectors.mapping(EnrollDO::getUserId, Collectors
+                .toList())));
 
         // 5. 批量更新 ted_org_class_candidate → 已考试
         for (Map.Entry<Long, List<Long>> entry : classIdToCandidateIds.entrySet()) {
@@ -593,12 +583,11 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
             List<Long> candidateIds = entry.getValue().stream().distinct().toList();
 
             if (CollUtil.isNotEmpty(candidateIds)) {
-                LambdaUpdateWrapper<OrgClassCandidateDO> updateWrapper =
-                        new LambdaUpdateWrapper<>();
+                LambdaUpdateWrapper<OrgClassCandidateDO> updateWrapper = new LambdaUpdateWrapper<>();
 
                 updateWrapper.eq(OrgClassCandidateDO::getClassId, classId)
-                        .in(OrgClassCandidateDO::getCandidateId, candidateIds)
-                        .set(OrgClassCandidateDO::getStatus, OrgClassCandidateStatusEnum.EXAMINED.getValue());
+                    .in(OrgClassCandidateDO::getCandidateId, candidateIds)
+                    .set(OrgClassCandidateDO::getStatus, OrgClassCandidateStatusEnum.EXAMINED.getValue());
 
                 orgClassCandidateMapper.update(null, updateWrapper);
             }
@@ -622,10 +611,8 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
 
         // 转成 Map<recordId, weldingProjectCodes>
         Map<Long, String> recordWeldingMap = resultList.stream()
-                .collect(Collectors.toMap(
-                        map -> ((Number) map.get("record_id")).longValue(),
-                        map -> (String) map.get("welding_project_codes")
-                ));
+            .collect(Collectors.toMap(map -> ((Number)map.get("record_id")).longValue(), map -> (String)map
+                .get("welding_project_codes")));
 
         List<WeldingOperScoreDO> weldingScoreBatch = new ArrayList<>();
         for (ExamRecordsDO record : examRecordsList) {
@@ -649,7 +636,6 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
             weldingOperScoreMapper.insertBatch(weldingScoreBatch);
         }
     }
-
 
     @Override
     public List<ProjectVo> getSelectOptions() {
@@ -679,9 +665,9 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
 
         // 定义时间解析器
         DateTimeFormatter formatter = new DateTimeFormatterBuilder().parseStrict()
-                .appendPattern("uuuu-MM-dd")
-                .toFormatter()
-                .withResolverStyle(ResolverStyle.STRICT);
+            .appendPattern("uuuu-MM-dd")
+            .toFormatter()
+            .withResolverStyle(ResolverStyle.STRICT);
 
         try (InputStream is = file.getInputStream()) {
             Workbook workbook = WorkbookFactory.create(is);
@@ -744,16 +730,16 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
 
                 // 检查项目代码是否存在
                 ProjectDO projectDO = projectMapper.selectOne(new LambdaQueryWrapper<ProjectDO>()
-                        .eq(ProjectDO::getProjectCode, projectCode));
+                    .eq(ProjectDO::getProjectCode, projectCode));
                 if (projectDO == null) {
                     throw new BusinessException("第" + rowIndex + "行：考试项目代码 [" + projectCode + "] 不存在");
                 }
 
                 // 禁止计划重名（数据库）
                 ExamPlanDO existingPlan = baseMapper.selectOne(new QueryWrapper<ExamPlanDO>()
-                        .eq("exam_plan_name", planName)
-                        .eq("is_deleted", 0)
-                        .eq("plan_type", projectDO.getProjectType()));
+                    .eq("exam_plan_name", planName)
+                    .eq("is_deleted", 0)
+                    .eq("plan_type", projectDO.getProjectType()));
                 if (existingPlan != null) {
                     throw new BusinessException("第" + rowIndex + "行：计划名称已存在系统中");
                 }
@@ -768,7 +754,7 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
                 LocalDateTime signupEndTime = examStartTime.minusDays(1).withHour(23).withMinute(59).withSecond(59);
 
                 rowList.add(new ExamPlanExcelRowDTO(planName, projectDO
-                        .getId(), signupStartTime, signupEndTime, examStartTime, maxCandidates, projectDO
+                    .getId(), signupStartTime, signupEndTime, examStartTime, maxCandidates, projectDO
                         .getProjectType(), rowIndex));
             }
 
@@ -813,7 +799,7 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         queryWrapper.eq("tep.is_deleted", 0);
         // 执行分页查询
         IPage<OrgExamPlanVO> page = baseMapper.orgGetPlanList(new Page<>(pageQuery.getPage(), pageQuery
-                .getSize()), queryWrapper, userTokenDo.getUserId());
+            .getSize()), queryWrapper, userTokenDo.getUserId());
 
         // 将查询结果转换成 PageResp 对象
         PageResp<OrgExamPlanVO> pageResp = PageResp.build(page, OrgExamPlanVO.class);
@@ -866,7 +852,7 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
 
         // 2. 校验最终确定考试时间及地点状态
         ValidationUtils.throwIf(PlanFinalConfirmedStatus.DIRECTOR_PENDING.getValue()
-                .equals(req.getIsFinalConfirmed()), "最终确定考试时间及地点已确认");
+            .equals(req.getIsFinalConfirmed()), "最终确定考试时间及地点已确认");
 
         // 3. 解析报名时间段
         List<String> enrollList = req.getEnrollList();
@@ -887,11 +873,11 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         List<Long> theoryIds = req.getTheoryClassroomId();
         List<Long> operIds = req.getOperationClassroomId();
         ValidationUtils.throwIf(invigilatorCount < ((theoryIds == null ? 0 : theoryIds.size()) + (operIds == null
-                ? 0
-                : operIds.size())), "所设置的监考员人数不足以分配到全部考场");
+            ? 0
+            : operIds.size())), "所设置的监考员人数不足以分配到全部考场");
         // 判断有没有启用监考员劳务费
         LaborFeeDO laborFeeDO = laborFeeMapper.selectOne(new LambdaQueryWrapper<LaborFeeDO>()
-                .eq(LaborFeeDO::getIsEnabled, Boolean.TRUE));
+            .eq(LaborFeeDO::getIsEnabled, Boolean.TRUE));
         ValidationUtils.throwIfNull(laborFeeDO, "当前未配置启用中的监考劳务费规则");
 
         if (!CollectionUtils.isEmpty(theoryIds)) {
@@ -925,19 +911,19 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         // 5. 如果是检验类型，校验报名人员是否全部审核通过
         if (ExamPlanTypeEnum.INSPECTION.getValue().equals(examPlanDO.getPlanType())) {
             long pendingCount = specialCertificationApplicantMapper
-                    .selectCount(new LambdaQueryWrapper<SpecialCertificationApplicantDO>()
-                            .eq(SpecialCertificationApplicantDO::getPlanId, id)
-                            .notIn(SpecialCertificationApplicantDO::getStatus, Arrays
-                                    .asList(SpecialCertificationApplicantAuditStatusEnum.APPROVED
-                                            .getValue(), SpecialCertificationApplicantAuditStatusEnum.FAKE_MATERIAL.getValue())));
+                .selectCount(new LambdaQueryWrapper<SpecialCertificationApplicantDO>()
+                    .eq(SpecialCertificationApplicantDO::getPlanId, id)
+                    .notIn(SpecialCertificationApplicantDO::getStatus, Arrays
+                        .asList(SpecialCertificationApplicantAuditStatusEnum.APPROVED
+                            .getValue(), SpecialCertificationApplicantAuditStatusEnum.FAKE_MATERIAL.getValue())));
             ValidationUtils.throwIf(pendingCount > 0, "存在未审核考试报名申请，请审核后再确认考试时间或地点");
         }
 
         // 6. 校验考试人员缴费状态
         long unpaidCount = examineePaymentAuditMapper.selectCount(new LambdaQueryWrapper<ExamineePaymentAuditDO>()
-                .eq(ExamineePaymentAuditDO::getExamPlanId, id)
-                .notIn(ExamineePaymentAuditDO::getAuditStatus, Arrays.asList(PaymentAuditStatusEnum.APPROVED
-                        .getValue(), PaymentAuditStatusEnum.REFUNDED.getValue())));
+            .eq(ExamineePaymentAuditDO::getExamPlanId, id)
+            .notIn(ExamineePaymentAuditDO::getAuditStatus, Arrays.asList(PaymentAuditStatusEnum.APPROVED
+                .getValue(), PaymentAuditStatusEnum.REFUNDED.getValue())));
         ValidationUtils.throwIf(unpaidCount > 0, "存在考试人员未提交缴费通知单或审核未通过，请到考生缴费审核管理完成审核");
 
         // 7. 计算考试结束时间
@@ -958,7 +944,6 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         // 判断题库是否够考试
         questionBankService.generateExamQuestionBank(id);
 
-
         // 10.插入考场和计划关系
         if (!CollectionUtils.isEmpty(classroomIds)) {
             // 添加考场信息
@@ -969,8 +954,8 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         int alterInvigilatorCount = 0;
         // 处理理论班级
         if (!CollectionUtils.isEmpty(theoryIds)) {
-            List<ClassroomInvigilatorDTO> hasExamStartDateList =
-                    baseMapper.findInvigilatorsByDateAndClassrooms(examPlanDO.getStartTime(), theoryIds);
+            List<ClassroomInvigilatorDTO> hasExamStartDateList = baseMapper
+                .findInvigilatorsByDateAndClassrooms(examPlanDO.getStartTime(), theoryIds);
             if (!CollectionUtils.isEmpty(hasExamStartDateList)) {
                 // 如果只有理论考试，那么把所有的监考员都安排到理论考场
                 if (CollectionUtils.isEmpty(operIds)) {
@@ -1016,7 +1001,8 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
             } else {
                 // 如果当天没考试，随机分配理论考场一个监考老师
                 // 11.随机分配监考人员
-                randomInvigilator(theoryIds, examPlanDO.getStartTime(), id, theoryIds.size(), laborFeeDO, ExamTypeEnum.THEORY.getValue());
+                randomInvigilator(theoryIds, examPlanDO.getStartTime(), id, theoryIds
+                    .size(), laborFeeDO, ExamTypeEnum.THEORY.getValue());
                 alterHandClassroomIds.addAll(theoryIds);
                 alterInvigilatorCount += theoryIds.size();
             }
@@ -1024,14 +1010,13 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
 
         // 处理实操考场
         if (!CollectionUtils.isEmpty(operIds)) {
-            List<ClassroomInvigilatorDTO> hasOperExamStartDateList =
-                    baseMapper.findInvigilatorsByDateAndClassrooms(examPlanDO.getStartTime(), operIds);
+            List<ClassroomInvigilatorDTO> hasOperExamStartDateList = baseMapper
+                .findInvigilatorsByDateAndClassrooms(examPlanDO.getStartTime(), operIds);
             // 今天已有考试的考场复用
             if (!CollectionUtils.isEmpty(hasOperExamStartDateList)) {
                 // 按考场分组
-                Map<Long, List<ClassroomInvigilatorDTO>> classroomMap =
-                        hasOperExamStartDateList.stream()
-                                .collect(Collectors.groupingBy(ClassroomInvigilatorDTO::getClassroomId));
+                Map<Long, List<ClassroomInvigilatorDTO>> classroomMap = hasOperExamStartDateList.stream()
+                    .collect(Collectors.groupingBy(ClassroomInvigilatorDTO::getClassroomId));
 
                 List<PlanInvigilateDO> invigilateDOS = new ArrayList<>();
 
@@ -1054,12 +1039,12 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
                 alterInvigilatorCount += invigilateDOS.size();
             } else {
                 // 今天没有考试，随机分配
-                randomInvigilator(operIds, examPlanDO.getStartTime(), id, operIds.size(), laborFeeDO, ExamTypeEnum.PRACTICE.getValue());
+                randomInvigilator(operIds, examPlanDO.getStartTime(), id, operIds
+                    .size(), laborFeeDO, ExamTypeEnum.PRACTICE.getValue());
                 alterHandClassroomIds.addAll(operIds);
                 alterInvigilatorCount += operIds.size();
             }
         }
-
 
         // 判断是否所有的考场都安排了监考员
         if (alterHandClassroomIds.size() < classroomIds.size()) {
@@ -1068,7 +1053,8 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
             unAssignedClassroomSet.removeAll(alterHandClassroomIds);
             List<Long> unAssignedClassroomIds = new ArrayList<>(unAssignedClassroomSet);
             // 随机安排
-            randomInvigilator(unAssignedClassroomIds, examPlanDO.getStartTime(), id, unAssignedClassroomIds.size(), laborFeeDO, ExamTypeEnum.PRACTICE.getValue());
+            randomInvigilator(unAssignedClassroomIds, examPlanDO.getStartTime(), id, unAssignedClassroomIds
+                .size(), laborFeeDO, ExamTypeEnum.PRACTICE.getValue());
             alterHandClassroomIds.addAll(unAssignedClassroomIds);
             alterInvigilatorCount += unAssignedClassroomIds.size();
         }
@@ -1085,11 +1071,12 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
                 List<Long> shuffledClassroomIds = new ArrayList<>(alterHandClassroomIds);
                 Collections.shuffle(shuffledClassroomIds);
                 needAddInvigilatorClassroomIds = shuffledClassroomIds.stream()
-                        .limit(remainInvigilatorCount)
-                        .collect(Collectors.toList());
+                    .limit(remainInvigilatorCount)
+                    .collect(Collectors.toList());
             }
             // 随机安排
-            randomInvigilator(needAddInvigilatorClassroomIds, examPlanDO.getStartTime(), id, remainInvigilatorCount, laborFeeDO, ExamTypeEnum.PRACTICE.getValue());
+            randomInvigilator(needAddInvigilatorClassroomIds, examPlanDO
+                .getStartTime(), id, remainInvigilatorCount, laborFeeDO, ExamTypeEnum.PRACTICE.getValue());
         }
 
         // 9. 执行更新
@@ -1106,19 +1093,21 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         SqlSession sqlSession = SqlHelper.sqlSession(getEntityClass());
         sqlSession.clearCache();
         // 先找出当前计划已存在的监考员，同一个计划不能有相同的监考员
-        List<PlanInvigilateDO> planInvigilateDOS = planInvigilateMapper.selectList(new LambdaQueryWrapper<PlanInvigilateDO>()
-                .eq(PlanInvigilateDO::getExamPlanId, planId)
+        List<PlanInvigilateDO> planInvigilateDOS = planInvigilateMapper
+            .selectList(new LambdaQueryWrapper<PlanInvigilateDO>().eq(PlanInvigilateDO::getExamPlanId, planId)
                 .eq(PlanInvigilateDO::getInvigilateStatus, InvigilateStatusEnum.NOT_START.getValue())
                 .select(PlanInvigilateDO::getInvigilatorId));
-        List<Long> planAlterExistInvigilateIds = planInvigilateDOS.stream().map(PlanInvigilateDO::getInvigilatorId).toList();
+        List<Long> planAlterExistInvigilateIds = planInvigilateDOS.stream()
+            .map(PlanInvigilateDO::getInvigilatorId)
+            .toList();
         // 获取所选时间段有空闲的监考人员并上传了对应八大类资质的
         List<AvailableInvigilatorResp> availableInvigilatorList = planInvigilateMapper
-                .selectAvailableInvigilatorsExcludingAssigned(startTime, planId, invigilatorId, planAlterExistInvigilateIds, examType, specialEquipmentManageTypeId);
+            .selectAvailableInvigilatorsExcludingAssigned(startTime, planId, invigilatorId, planAlterExistInvigilateIds, examType, specialEquipmentManageTypeId);
         ValidationUtils.throwIf(ObjectUtil.isEmpty(availableInvigilatorList) || availableInvigilatorList
-                .size() < invigilatorNum, "当前时间段可分配的监考员或有资质的监考员数量不足");
+            .size() < invigilatorNum, "当前时间段可分配的监考员或有资质的监考员数量不足");
         Collections.shuffle(availableInvigilatorList);
         List<AvailableInvigilatorResp> assignedAvailableInvigilatorList = availableInvigilatorList
-                .subList(0, invigilatorNum);
+            .subList(0, invigilatorNum);
         // 还要随机分配给classRoomNum
         Map<Long, List<AvailableInvigilatorResp>> assignmentMap = new HashMap<>();
 
@@ -1198,24 +1187,25 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
 
         // 判断有没有启用监考员劳务费
         LaborFeeDO laborFeeDO = laborFeeMapper.selectOne(new LambdaQueryWrapper<LaborFeeDO>()
-                .eq(LaborFeeDO::getIsEnabled, Boolean.TRUE));
+            .eq(LaborFeeDO::getIsEnabled, Boolean.TRUE));
         ValidationUtils.throwIfNull(laborFeeDO, "当前未配置启用中的监考劳务费规则");
 
         // 1. 先删除原监考员
         planInvigilateMapper.delete(new LambdaQueryWrapper<PlanInvigilateDO>()
-                .eq(PlanInvigilateDO::getExamPlanId, planId));
+            .eq(PlanInvigilateDO::getExamPlanId, planId));
 
         // 2. 查询所有考场 classroomId
         List<Long> classroomIds = planClassroomMapper.selectList(new LambdaQueryWrapper<PlancalssroomDO>()
-                .eq(PlancalssroomDO::getPlanId, planId)
-                .select(PlancalssroomDO::getClassroomId)).stream().map(PlancalssroomDO::getClassroomId).toList();
+            .eq(PlancalssroomDO::getPlanId, planId)
+            .select(PlancalssroomDO::getClassroomId)).stream().map(PlancalssroomDO::getClassroomId).toList();
 
         // 3. 随机分配监考逻辑
-        randomInvigilator(classroomIds, examPlanDO.getStartTime(), planId, invigilatorNum, laborFeeDO, ExamTypeEnum.PRACTICE.getValue());
+        randomInvigilator(classroomIds, examPlanDO
+            .getStartTime(), planId, invigilatorNum, laborFeeDO, ExamTypeEnum.PRACTICE.getValue());
         // 4.修改计划分配监考员类型
         baseMapper.update(new LambdaUpdateWrapper<ExamPlanDO>()
-                .set(ExamPlanDO::getAssignType, InvigilatorAssignTypeEnum.RANDOM_SECOND.getValue())
-                .eq(ExamPlanDO::getId, planId));
+            .set(ExamPlanDO::getAssignType, InvigilatorAssignTypeEnum.RANDOM_SECOND.getValue())
+            .eq(ExamPlanDO::getId, planId));
         return true;
     }
 
@@ -1233,19 +1223,19 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
 
         // 2. 查询空闲监考员
         List<AvailableInvigilatorResp> availableInvigilatorResps = planInvigilateMapper
-                .selectAvailableInvigilators(examPlanDO.getStartTime(), planId, invigilatorId);
+            .selectAvailableInvigilators(examPlanDO.getStartTime(), planId, invigilatorId);
 
         // 3. 查询已经安排的监考员
         List<Long> assignedInvigilatorIds = planInvigilateMapper.selectList(new LambdaQueryWrapper<PlanInvigilateDO>()
-                .eq(PlanInvigilateDO::getExamPlanId, planId)
-                .eq(PlanInvigilateDO::getInvigilateStatus, InvigilateStatusEnum.NOT_START.getValue())
-                .select(PlanInvigilateDO::getInvigilatorId)).stream().map(PlanInvigilateDO::getInvigilatorId).toList();
+            .eq(PlanInvigilateDO::getExamPlanId, planId)
+            .eq(PlanInvigilateDO::getInvigilateStatus, InvigilateStatusEnum.NOT_START.getValue())
+            .select(PlanInvigilateDO::getInvigilatorId)).stream().map(PlanInvigilateDO::getInvigilatorId).toList();
 
         // 4. 过滤已经安排的监考员
         if (ObjectUtil.isNotEmpty(assignedInvigilatorIds)) {
             availableInvigilatorResps = availableInvigilatorResps.stream()
-                    .filter(resp -> !assignedInvigilatorIds.contains(resp.getId()))
-                    .toList();
+                .filter(resp -> !assignedInvigilatorIds.contains(resp.getId()))
+                .toList();
         }
 
         // 5. 返回最终可用监考员列表
@@ -1272,10 +1262,9 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
 
         // 查询报名记录
         boolean isConfirmed = PlanFinalConfirmedStatus.DIRECTOR_CONFIRMED.getValue().equals(isFinalConfirmed);
-        List<EnrollDO> enrollList = enrollMapper.selectList(
-                new LambdaQueryWrapper<EnrollDO>().eq(EnrollDO::getExamPlanId, planId)
-                        .orderByAsc(EnrollDO::getId)
-        );
+        List<EnrollDO> enrollList = enrollMapper.selectList(new LambdaQueryWrapper<EnrollDO>()
+            .eq(EnrollDO::getExamPlanId, planId)
+            .orderByAsc(EnrollDO::getId));
         ValidationUtils.throwIf(ObjectUtil.isEmpty(enrollList) && isConfirmed, "未查询到考生报名信息");
 
         // 增加考试计划和班级关联表
@@ -1301,16 +1290,16 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         if (PlanFinalConfirmedStatus.DIRECTOR_REJECTED.getValue().equals(isFinalConfirmed)) {
             updateWrapper.set(ExamPlanDO::getAssignType, null);
             planInvigilateMapper.delete(new LambdaQueryWrapper<PlanInvigilateDO>()
-                    .eq(PlanInvigilateDO::getExamPlanId, planId));
+                .eq(PlanInvigilateDO::getExamPlanId, planId));
             planClassroomMapper.delete(new LambdaQueryWrapper<PlancalssroomDO>()
-                    .eq(PlancalssroomDO::getPlanId, planId));
+                .eq(PlancalssroomDO::getPlanId, planId));
         }
 
         boolean success = baseMapper.update(updateWrapper) > 0;
 
         // 生成开考密码（每个考场统一）
         Map<Long, List<InvigilatorAssignResp>> groupByClassroom = invigilatorList.stream()
-                .collect(Collectors.groupingBy(InvigilatorAssignResp::getClassroomId));
+            .collect(Collectors.groupingBy(InvigilatorAssignResp::getClassroomId));
         List<PlanInvigilateDO> updateList = new ArrayList<>();
         for (Map.Entry<Long, List<InvigilatorAssignResp>> entry : groupByClassroom.entrySet()) {
             String examPassword = generateExamPassword();
@@ -1334,12 +1323,14 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
             // 查询用户信息
             List<Long> userIds = enrollList.stream().map(EnrollDO::getUserId).distinct().toList();
             Map<Long, UserDO> userMap = userMapper.selectBatchIds(userIds)
-                    .stream().collect(Collectors.toMap(UserDO::getId, u -> u));
+                .stream()
+                .collect(Collectors.toMap(UserDO::getId, u -> u));
 
             // 查询班级信息
             List<Long> classIds = enrollList.stream().map(EnrollDO::getClassId).distinct().toList();
             Map<Long, String> classNameMap = orgClassMapper.selectByIds(classIds)
-                    .stream().collect(Collectors.toMap(OrgClassDO::getId, c -> Optional.ofNullable(c.getClassName()).orElse("")));
+                .stream()
+                .collect(Collectors.toMap(OrgClassDO::getId, c -> Optional.ofNullable(c.getClassName()).orElse("")));
 
             // ======= 1. 先批量生成报名表里的准考证号 =======
             List<EnrollDO> enrollUpdateList = new ArrayList<>();
@@ -1368,14 +1359,12 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
 
             for (EnrollDO enroll : enrollUpdateList) {
                 UserDO user = userMap.get(enroll.getUserId());
-                if (user == null) continue;
+                if (user == null)
+                    continue;
 
                 // 生成准考证 PDF
-                String ticketUrl = safeGenerateWorkerTicket(
-                        user.getId(), user.getUsername(), user.getNickname(),
-                        enroll.getExamNumber(),
-                        enroll.getClassId(), classNameMap.get(enroll.getClassId())
-                );
+                String ticketUrl = safeGenerateWorkerTicket(user.getId(), user.getUsername(), user.getNickname(), enroll
+                    .getExamNumber(), enroll.getClassId(), classNameMap.get(enroll.getClassId()));
 
                 WorkerExamTicketDO ticket = new WorkerExamTicketDO();
                 ticket.setEnrollId(enroll.getId());
@@ -1407,7 +1396,6 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         }
         return success;
     }
-
 
     /**
      * 调整考试/报名时间
@@ -1459,18 +1447,16 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         Integer invigilateStatus = examPlanQuery.getInvigilateStatus();
         if (invigilateStatus != null) {
             if (InvigilateStatusEnum.FINISHED.getValue().equals(invigilateStatus)) {
-                queryWrapper.eq("tpi.invigilate_status",
-                        InvigilateStatusEnum.FINISHED.getValue());
+                queryWrapper.eq("tpi.invigilate_status", InvigilateStatusEnum.FINISHED.getValue());
             } else {
-                queryWrapper.in("tpi.invigilate_status",
-                        InvigilateStatusEnum.NOT_START.getValue(),
-                        InvigilateStatusEnum.DURING_NVIGILATION.getValue());
+                queryWrapper.in("tpi.invigilate_status", InvigilateStatusEnum.NOT_START
+                    .getValue(), InvigilateStatusEnum.DURING_NVIGILATION.getValue());
             }
         }
 
         // 执行分页查询
         IPage<InvigilateExamPlanVO> page = baseMapper.invigilateGetPlanList(new Page<>(pageQuery.getPage(), pageQuery
-                .getSize()), queryWrapper, userTokenDo.getUserId());
+            .getSize()), queryWrapper, userTokenDo.getUserId());
 
         // 将查询结果转换成 PageResp 对象
         PageResp<InvigilateExamPlanVO> pageResp = PageResp.build(page, InvigilateExamPlanVO.class);
@@ -1498,21 +1484,21 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         ExamPlanDO examPlanDO = baseMapper.selectById(planId);
         ValidationUtils.throwIfNull(examPlanDO, "考试计划信息不存在");
         ValidationUtils.throwIf(!PlanFinalConfirmedStatus.DIRECTOR_CONFIRMED.getValue()
-                .equals(examPlanDO.getIsFinalConfirmed()), "考试计划尚未完成最终确认");
+            .equals(examPlanDO.getIsFinalConfirmed()), "考试计划尚未完成最终确认");
         ValidationUtils.throwIf(PlanConstant.OVER.getStatus().equals(examPlanDO.getStatus()), "考试已结束");
 
         PlanInvigilateDO planInvigilateDO = planInvigilateMapper.selectOne(new LambdaQueryWrapper<PlanInvigilateDO>()
-                .eq(PlanInvigilateDO::getExamPlanId, planId)
-                .eq(PlanInvigilateDO::getClassroomId, classroomId)
-                .eq(PlanInvigilateDO::getInvigilatorId, userTokenDo.getUserId())
-                .last("limit 1")
-                .select(PlanInvigilateDO::getExamPassword));
+            .eq(PlanInvigilateDO::getExamPlanId, planId)
+            .eq(PlanInvigilateDO::getClassroomId, classroomId)
+            .eq(PlanInvigilateDO::getInvigilatorId, userTokenDo.getUserId())
+            .last("limit 1")
+            .select(PlanInvigilateDO::getExamPassword));
         ValidationUtils.throwIfNull(planInvigilateDO, "当前考场暂无可开考的监考任务");
 
-        boolean statusIsSuccess = PlanConstant.SUCCESS
-                .getStatus().equals(examPlanDO.getStatus());
+        boolean statusIsSuccess = PlanConstant.SUCCESS.getStatus().equals(examPlanDO.getStatus());
 
-        ValidationUtils.throwIf(statusIsSuccess && !req.getExamPassword().equals(planInvigilateDO.getExamPassword()), "开考密码错误，请核对后重试");
+        ValidationUtils.throwIf(statusIsSuccess && !req.getExamPassword()
+            .equals(planInvigilateDO.getExamPassword()), "开考密码错误，请核对后重试");
         LocalDateTime startTime = examPlanDO.getStartTime();
         if (statusIsSuccess) {
             LocalDateTime now = LocalDateTime.now();
@@ -1520,13 +1506,13 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
             ValidationUtils.throwIf(Duration.between(now, startTime).toMinutes() > 15, "请于考前15分钟内进入");
             // 修改考试计划状态
             baseMapper.update(new LambdaUpdateWrapper<ExamPlanDO>().set(ExamPlanDO::getStatus, PlanConstant.EXAM_BEGUN
-                    .getStatus()).eq(ExamPlanDO::getId, planId));
+                .getStatus()).eq(ExamPlanDO::getId, planId));
 
             // 修改监考员状态
             planInvigilateMapper.update(new LambdaUpdateWrapper<PlanInvigilateDO>()
-                    .set(PlanInvigilateDO::getInvigilateStatus, InvigilateStatusEnum.DURING_NVIGILATION.getValue())
-                    .eq(PlanInvigilateDO::getClassroomId, classroomId)
-                    .eq(PlanInvigilateDO::getExamPlanId, planId));
+                .set(PlanInvigilateDO::getInvigilateStatus, InvigilateStatusEnum.DURING_NVIGILATION.getValue())
+                .eq(PlanInvigilateDO::getClassroomId, classroomId)
+                .eq(PlanInvigilateDO::getExamPlanId, planId));
         }
 
         // 查出考场对应的信息
@@ -1566,17 +1552,17 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
 
         // 过滤掉 exam_plan_id 为 null 的记录再分组
         Map<Long, List<Map<String, Object>>> groupMap = list.stream()
-                .filter(m -> m.get("exam_plan_id") != null && m.get("exam_number") != null)
-                .collect(Collectors.groupingBy(m -> (Long) m.get("exam_plan_id")));
+            .filter(m -> m.get("exam_plan_id") != null && m.get("exam_number") != null)
+            .collect(Collectors.groupingBy(m -> (Long)m.get("exam_plan_id")));
 
         List<CascaderOptionResp> cascaderList = new ArrayList<>();
 
         for (Map.Entry<Long, List<Map<String, Object>>> entry : groupMap.entrySet()) {
             Long planId = entry.getKey();
-            String planName = (String) entry.getValue().get(0).get("exam_plan_name");
+            String planName = (String)entry.getValue().get(0).get("exam_plan_name");
 
             List<CascaderOptionResp> children = entry.getValue().stream().map(m -> {
-                String examNumber = (String) m.get("exam_number");
+                String examNumber = (String)m.get("exam_number");
                 String decryptedNumber = aesWithHMAC.verifyAndDecrypt(examNumber);
                 return new CascaderOptionResp(decryptedNumber, decryptedNumber);
             }).toList();
@@ -1604,7 +1590,7 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
 
         // 2. 按项目分组
         Map<Long, List<Map<String, Object>>> projectGroupMap = projectPlanList.stream()
-                .collect(Collectors.groupingBy(item -> (Long) item.get("project_id")));
+            .collect(Collectors.groupingBy(item -> (Long)item.get("project_id")));
 
         // 3. 构建 CascaderPlanResp 结构
         List<CascaderPlanResp> result = projectGroupMap.entrySet().stream().map(entry -> {
@@ -1612,7 +1598,7 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
             List<Map<String, Object>> plans = entry.getValue();
 
             // 项目名称为空则跳过这个项目
-            String projectName = (String) plans.get(0).get("project_name");
+            String projectName = (String)plans.get(0).get("project_name");
             if (projectName == null)
                 return null;
 
@@ -1623,8 +1609,8 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
             // 子级计划，过滤掉 plan_name 为 null 的记录
             List<CascaderPlanResp> children = plans.stream().filter(p -> p.get("exam_plan_name") != null).map(p -> {
                 CascaderPlanResp planResp = new CascaderPlanResp();
-                planResp.setValue((Long) p.get("plan_id"));
-                planResp.setLabel((String) p.get("exam_plan_name"));
+                planResp.setValue((Long)p.get("plan_id"));
+                planResp.setLabel((String)p.get("exam_plan_name"));
                 // 不设置 children，保持两层结构
                 return planResp;
             }).toList();
@@ -1663,7 +1649,7 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         super.sort(queryWrapper, pageQuery);
 
         IPage<ExamPlanDetailResp> page = baseMapper.selectExamPlanPagegetClassExamStatsPage(new Page<>(pageQuery
-                .getPage(), pageQuery.getSize()), queryWrapper, roadExamTypeId);
+            .getPage(), pageQuery.getSize()), queryWrapper, roadExamTypeId);
 
         PageResp<ExamPlanResp> build = PageResp.build(page, super.getListClass());
         build.getList().forEach(this::fill);
@@ -1689,7 +1675,7 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
         super.sort(queryWrapper, pageQuery);
 
         IPage<ExamPlanDetailResp> page = baseMapper.selectOrgExamPlanPagegetClassExamStatsPage(new Page<>(pageQuery
-                .getPage(), pageQuery.getSize()), queryWrapper, roadExamTypeId);
+            .getPage(), pageQuery.getSize()), queryWrapper, roadExamTypeId);
 
         PageResp<ExamPlanResp> build = PageResp.build(page, super.getListClass());
         build.getList().forEach(this::fill);
@@ -1706,75 +1692,59 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
     public Boolean scoreConfirmed(Long planId, Long classId) {
         // 校验考试计划
         PlanApplyClassDO planApplyClassDO = planApplyClassMapper.selectOne(new LambdaQueryWrapper<PlanApplyClassDO>()
-                .eq(PlanApplyClassDO::getPlanId, planId)
-                .eq(PlanApplyClassDO::getClassId, classId)
-                .select(PlanApplyClassDO::getIsScoreConfirmed));
-        ValidationUtils.throwIfNull(planApplyClassDO,"考试记录不存在");
-        ValidationUtils.throwIf(
-                ScoreConfirmStatusEnum.CONFIRMED.getValue().equals(planApplyClassDO.getIsScoreConfirmed()),
-                "该班级成绩已确认，无法重复确认"
-        );
+            .eq(PlanApplyClassDO::getPlanId, planId)
+            .eq(PlanApplyClassDO::getClassId, classId)
+            .select(PlanApplyClassDO::getIsScoreConfirmed));
+        ValidationUtils.throwIfNull(planApplyClassDO, "考试记录不存在");
+        ValidationUtils.throwIf(ScoreConfirmStatusEnum.CONFIRMED.getValue()
+            .equals(planApplyClassDO.getIsScoreConfirmed()), "该班级成绩已确认，无法重复确认");
 
         // 查询该班级下报了当前计划的所有人
         List<EnrollDO> classEnrollList = enrollMapper.selectList(new LambdaQueryWrapper<EnrollDO>()
-                .eq(EnrollDO::getExamPlanId, planId)
-                .eq(EnrollDO::getClassId, classId)
-                .eq(EnrollDO::getEnrollStatus, EnrollStatusConstant.COMPLETED)
-                .select(EnrollDO::getUserId));
+            .eq(EnrollDO::getExamPlanId, planId)
+            .eq(EnrollDO::getClassId, classId)
+            .eq(EnrollDO::getEnrollStatus, EnrollStatusConstant.COMPLETED)
+            .select(EnrollDO::getUserId));
         ValidationUtils.throwIfEmpty(classEnrollList, "该班级暂无考试记录");
 
         List<Long> candidateIds = classEnrollList.stream().map(EnrollDO::getUserId).toList();
 
         // 查询考试记录
-        List<ExamRecordsDO> records = examRecordsMapper.selectList(
-                new LambdaQueryWrapper<ExamRecordsDO>()
-                        .eq(ExamRecordsDO::getPlanId, planId)
-                        .in(ExamRecordsDO::getCandidateId, candidateIds)
+        List<ExamRecordsDO> records = examRecordsMapper.selectList(new LambdaQueryWrapper<ExamRecordsDO>()
+            .eq(ExamRecordsDO::getPlanId, planId)
+            .in(ExamRecordsDO::getCandidateId, candidateIds)
 
         );
         ValidationUtils.throwIfEmpty(records, "暂无考试记录");
 
         // 是否存在未录入考试结果
-        ValidationUtils.throwIf(
-                records.stream().anyMatch(r ->
-                        ExamResultStatusEnum.NOT_ENTERED.getValue() == r.getExamResultStatus()),
-                "存在未录入成绩的考试记录，请先进行录入"
-        );
+        ValidationUtils.throwIf(records.stream()
+            .anyMatch(r -> ExamResultStatusEnum.NOT_ENTERED.getValue() == r
+                .getExamResultStatus()), "存在未录入成绩的考试记录，请先进行录入");
 
         // 是否存在实操 / 道路成绩未录入
-        ValidationUtils.throwIf(
-                records.stream().anyMatch(r ->
-                        ExamScoreEntryStatusEnum.NO_ENTRY.getValue()
-                                .equals(r.getRoadInputStatus())
-                                || ExamScoreEntryStatusEnum.NO_ENTRY.getValue()
-                                .equals(r.getOperInputStatus())),
-                "存在实操或道路成绩未录入记录，请先进行录入"
-        );
+        ValidationUtils.throwIf(records.stream()
+            .anyMatch(r -> ExamScoreEntryStatusEnum.NO_ENTRY.getValue()
+                .equals(r.getRoadInputStatus()) || ExamScoreEntryStatusEnum.NO_ENTRY.getValue()
+                    .equals(r.getOperInputStatus())), "存在实操或道路成绩未录入记录，请先进行录入");
 
         // 是否存在及格但未生成证书的记录
-        ValidationUtils.throwIf(
-                records.stream().anyMatch(r ->
-                        ExamResultStatusEnum.PASSED.getValue() == r.getExamResultStatus()
-                                && ExamRecprdsHasCertofocateEnum.NO.getValue()
-                                .equals(r.getIsCertificateGenerated())),
-                "存在考试及格但未生成证书信息记录，请先进行生成"
-        );
+        ValidationUtils.throwIf(records.stream()
+            .anyMatch(r -> ExamResultStatusEnum.PASSED.getValue() == r
+                .getExamResultStatus() && ExamRecprdsHasCertofocateEnum.NO.getValue()
+                    .equals(r.getIsCertificateGenerated())), "存在考试及格但未生成证书信息记录，请先进行生成");
 
         // 确认成绩（加状态条件，防并发）
-        int updated = planApplyClassMapper.update(
-                null,
-                new LambdaUpdateWrapper<PlanApplyClassDO>()
-                        .set(PlanApplyClassDO::getIsScoreConfirmed, ScoreConfirmStatusEnum.CONFIRMED.getValue())
-                        .eq(PlanApplyClassDO::getPlanId, planId)
-                        .eq(PlanApplyClassDO::getClassId, classId)
-                        .eq(PlanApplyClassDO::getIsScoreConfirmed, ScoreConfirmStatusEnum.UNCONFIRMED.getValue())
-        );
+        int updated = planApplyClassMapper.update(null, new LambdaUpdateWrapper<PlanApplyClassDO>()
+            .set(PlanApplyClassDO::getIsScoreConfirmed, ScoreConfirmStatusEnum.CONFIRMED.getValue())
+            .eq(PlanApplyClassDO::getPlanId, planId)
+            .eq(PlanApplyClassDO::getClassId, classId)
+            .eq(PlanApplyClassDO::getIsScoreConfirmed, ScoreConfirmStatusEnum.UNCONFIRMED.getValue()));
 
         ValidationUtils.throwIf(updated == 0, "成绩确认失败，请刷新后重试");
 
         return Boolean.TRUE;
     }
-
 
     /**
      * 随机生成监考员开考密码
@@ -1809,7 +1779,7 @@ public class ExamPlanServiceImpl extends BaseServiceImpl<ExamPlanMapper, ExamPla
                                             String className) {
         try {
             return candidateTicketReactiveService
-                    .generateWorkerTicket(userId, idCard, encryptedExamNo, classId, className);
+                .generateWorkerTicket(userId, idCard, encryptedExamNo, classId, className);
         } catch (Exception e) {
             throw new BusinessException("生成考生【" + nickname + "】的准考证失败，请稍后重试");
         }
