@@ -19,7 +19,6 @@ package top.continew.admin.exam.service.impl;
 import cn.crane4j.core.util.StringUtils;
 import cn.hutool.core.bean.BeanUtil;
 import cn.hutool.core.collection.CollUtil;
-import cn.hutool.core.lang.TypeReference;
 import cn.hutool.core.util.ObjectUtil;
 import cn.hutool.core.util.StrUtil;
 import cn.hutool.json.JSONUtil;
@@ -28,8 +27,6 @@ import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.annotation.Resource;
 import lombok.RequiredArgsConstructor;
 
@@ -141,20 +138,20 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
             queryWrapper.eq("su.username", aesWithHMAC.encryptAndSign(username));
         }
         // 根据 pageQuery 里的排序参数，对查询结果进行排序
-//        super.sort(queryWrapper, pageQuery);
+        //        super.sort(queryWrapper, pageQuery);
 
         if (Boolean.TRUE.equals(query.getIsOrgQuery())) {
             // 查询当前用户属于哪个机构
             UserTokenDo userTokenDo = TokenLocalThreadUtil.get();
             TedOrgUser tedOrgUser = orgUserMapper.selectOne(new LambdaQueryWrapper<TedOrgUser>()
-                    .eq(TedOrgUser::getUserId, userTokenDo.getUserId())
-                    .select(TedOrgUser::getOrgId, TedOrgUser::getId)
-                    .last("limit 1"));
+                .eq(TedOrgUser::getUserId, userTokenDo.getUserId())
+                .select(TedOrgUser::getOrgId, TedOrgUser::getId)
+                .last("limit 1"));
             queryWrapper.eq("toc.org_id", tedOrgUser.getOrgId());
         }
         // 查询
         IPage<ExamRecordDTO> page = baseMapper.getExamRecords(new Page<>(pageQuery.getPage(), pageQuery
-                .getSize()), queryWrapper, roadExamTypeId, metalProjectId, nonmetalProjectId);
+            .getSize()), queryWrapper, roadExamTypeId, metalProjectId, nonmetalProjectId);
         // 将查询结果转换成 PageResp 对象
         PageResp<ExamRecordsResp> pageResp = PageResp.build(page, super.getListClass());
         List<ExamRecordsResp> list = pageResp.getList();
@@ -169,14 +166,12 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
                 // 如果是焊接项目，解析 JSON 成对象列表
                 if (isWeldingProject && !StringUtils.isEmpty(item.getWeldingOperScores())) {
-                    item.setWeldingOperScoreVoList(
-                            JSONUtil.toList(item.getWeldingOperScores(), WeldingOperScoreVO.class)
-                    );
+                    item.setWeldingOperScoreVoList(JSONUtil.toList(item
+                        .getWeldingOperScores(), WeldingOperScoreVO.class));
                 }
                 return item;
             }).toList());
         }
-
 
         // 遍历查询结果列表，调用 fill 方法填充额外字段或处理数据
         pageResp.getList().forEach(this::fill);
@@ -218,9 +213,9 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
         ValidationUtils.throwIf(ObjectUtils.isEmpty(userDO), "无考试内容");
         // 根据考生ID获取考生的所有考试考场
         List<ExamRecordsDO> examRecordsDOS = baseMapper.selectList(new LambdaQueryWrapper<ExamRecordsDO>()
-                .eq(ExamRecordsDO::getCandidateId, userDO.getId())
-                .eq(ExamRecordsDO::getReviewStatus, ExamRecordsReviewStatusEnum.WAITING_EXAMINATION.getValue())
-                .eq(ExamRecordsDO::getRegistrationProgress, ExamRecordsRegisterationProgressEnum.REVIEWED.getValue()));
+            .eq(ExamRecordsDO::getCandidateId, userDO.getId())
+            .eq(ExamRecordsDO::getReviewStatus, ExamRecordsReviewStatusEnum.WAITING_EXAMINATION.getValue())
+            .eq(ExamRecordsDO::getRegistrationProgress, ExamRecordsRegisterationProgressEnum.REVIEWED.getValue()));
         ValidationUtils.throwIf(ObjectUtils.isEmpty(examRecordsDOS), "无考试内容");
         // 根据计划ID查询考场地址
         List<Long> planIds = examRecordsDOS.stream().map(item -> {
@@ -233,13 +228,13 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
         //        }).collect(Collectors.toList());
         List<Long> locationIds = examPlanMapper.getPlanLocationIdsById(planIds);
         List<LocationClassroomDO> locationClassroomDOS = locationClassroomMapper
-                .selectList(new LambdaQueryWrapper<LocationClassroomDO>()
-                        .in(LocationClassroomDO::getLocationId, locationIds));
+            .selectList(new LambdaQueryWrapper<LocationClassroomDO>()
+                .in(LocationClassroomDO::getLocationId, locationIds));
         List<Integer> roomIds = locationClassroomDOS.stream().map(item -> {
             return item.getClassroomId();
         }).collect(Collectors.toList());
         List<ClassroomDO> classroomDOS = classroomMapper.selectList(new LambdaQueryWrapper<ClassroomDO>()
-                .in(ClassroomDO::getId, roomIds));
+            .in(ClassroomDO::getId, roomIds));
         return Collections.emptyList();
     }
 
@@ -248,19 +243,19 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
     public void candidatesAdd(ExamRecordsDO examRecordsDO) {
         // 1 查询是否已有考试记录
         ExamRecordsDO existingRecord = baseMapper.selectOne(new LambdaQueryWrapper<ExamRecordsDO>()
-                .eq(ExamRecordsDO::getCandidateId, examRecordsDO.getCandidateId())
-                .eq(ExamRecordsDO::getPlanId, examRecordsDO.getPlanId())
-                .last("limit 1"));
+            .eq(ExamRecordsDO::getCandidateId, examRecordsDO.getCandidateId())
+            .eq(ExamRecordsDO::getPlanId, examRecordsDO.getPlanId())
+            .last("limit 1"));
 
         // 2 修改报名状态基础信息
         LambdaUpdateWrapper<EnrollDO> enrollUpdate = new LambdaUpdateWrapper<>();
         enrollUpdate.eq(EnrollDO::getUserId, examRecordsDO.getCandidateId())
-                .eq(EnrollDO::getExamPlanId, examRecordsDO.getPlanId())
-                .set(EnrollDO::getEnrollStatus, EnrollStatusConstant.COMPLETED)
-                .set(EnrollDO::getExamStatus, !ExamViolationTypeEnum.NO_SWITCH.getValue()
-                        .equals(examRecordsDO.getViolationType())
-                        ? EnrollStatusConstant.VIOLATION
-                        : EnrollStatusConstant.SUBMITTED);
+            .eq(EnrollDO::getExamPlanId, examRecordsDO.getPlanId())
+            .set(EnrollDO::getEnrollStatus, EnrollStatusConstant.COMPLETED)
+            .set(EnrollDO::getExamStatus, !ExamViolationTypeEnum.NO_SWITCH.getValue()
+                .equals(examRecordsDO.getViolationType())
+                    ? EnrollStatusConstant.VIOLATION
+                    : EnrollStatusConstant.SUBMITTED);
 
         enrollMapper.update(enrollUpdate);
 
@@ -297,7 +292,7 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
         // 7 插入考试记录
         // 获取计划是否有实操考试、道路考试
         ExamPresenceDTO examPlanOperAndRoadDTO = baseMapper.hasOperationOrRoadExam(examRecordsDO
-                .getPlanId(), roadExamTypeId);
+            .getPlanId(), roadExamTypeId);
         // 标记是否有实操/道路
         boolean hasOper = ProjectHasExamTypeEnum.YES.getValue().equals(examPlanOperAndRoadDTO.getIsOperation());
         boolean hasRoad = ProjectHasExamTypeEnum.YES.getValue().equals(examPlanOperAndRoadDTO.getIsRoad());
@@ -310,8 +305,8 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
             examRecordsDO.setRoadInputStatus(ExamScoreEntryStatusEnum.ENTERED.getValue());
 
             examRecordsDO.setExamResultStatus(examRecordsDO.getExamScores() >= ExamRecordConstants.PASSING_SCORE
-                    ? ExamResultStatusEnum.PASSED.getValue()
-                    : ExamResultStatusEnum.FAILED.getValue());
+                ? ExamResultStatusEnum.PASSED.getValue()
+                : ExamResultStatusEnum.FAILED.getValue());
         } else {
             // 如果任意一个存在，则成绩未录入
             if (!hasOper) {
@@ -332,12 +327,9 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
         // 如果是焊接项目，还需要插入焊接项目的实操成绩关联表
         ExamPlanDO examPlanDO = examPlanMapper.selectById(examRecordsDO.getPlanId());
         Long examProjectId = examPlanDO.getExamProjectId();
-        if (insert > 0
-                && (metalProjectId.equals(examProjectId)
-                || nonmetalProjectId.equals(examProjectId))) {
+        if (insert > 0 && (metalProjectId.equals(examProjectId) || nonmetalProjectId.equals(examProjectId))) {
 
-            String weldingProjectCodeStr =
-                    baseMapper.selectWeldingProjectCodeByRecordId(examRecordsDO.getId());
+            String weldingProjectCodeStr = baseMapper.selectWeldingProjectCodeByRecordId(examRecordsDO.getId());
 
             if (ObjectUtil.isEmpty(weldingProjectCodeStr)) {
                 return;
@@ -385,9 +377,9 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
         // 检查是否已生成证书
         List<Long> candidateIds = examRecordsDOS.stream()
-                .filter(record -> ExamRecprdsHasCertofocateEnum.YES.getValue().equals(record.getIsCertificateGenerated()))
-                .map(ExamRecordsDO::getCandidateId)
-                .toList();
+            .filter(record -> ExamRecprdsHasCertofocateEnum.YES.getValue().equals(record.getIsCertificateGenerated()))
+            .map(ExamRecordsDO::getCandidateId)
+            .toList();
 
         if (!candidateIds.isEmpty()) {
             List<UserDO> users = userMapper.selectByIds(candidateIds);
@@ -403,28 +395,28 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
         // 提前构建 planId -> CheckPlanHasExamTypeDTO 映射，提高查找效率
         Map<Long, CheckPlanHasExamTypeDTO> planTypeMap = planExamTypes.stream()
-                .collect(Collectors.toMap(CheckPlanHasExamTypeDTO::getPlanId, dto -> dto));
+            .collect(Collectors.toMap(CheckPlanHasExamTypeDTO::getPlanId, dto -> dto));
 
         // 检查计划是否支持当前录入类型
         List<String> invalidPlans = planExamTypes.stream()
-                .filter(dto -> (ExamScoreInputTypeEnum.OPER.getValue().equals(scoresType) && ProjectHasExamTypeEnum.NO
-                        .getValue()
-                        .equals(dto.getIsOperation())) || (ExamScoreInputTypeEnum.ROAD.getValue()
-                        .equals(scoresType) && ProjectHasExamTypeEnum.NO.getValue().equals(dto.getIsRoad())))
-                .map(CheckPlanHasExamTypeDTO::getPlanName)
-                .distinct()
-                .toList();
+            .filter(dto -> (ExamScoreInputTypeEnum.OPER.getValue().equals(scoresType) && ProjectHasExamTypeEnum.NO
+                .getValue()
+                .equals(dto.getIsOperation())) || (ExamScoreInputTypeEnum.ROAD.getValue()
+                    .equals(scoresType) && ProjectHasExamTypeEnum.NO.getValue().equals(dto.getIsRoad())))
+            .map(CheckPlanHasExamTypeDTO::getPlanName)
+            .distinct()
+            .toList();
 
         ValidationUtils.throwIfNotEmpty(invalidPlans, String.join("、", invalidPlans) + " 计划不支持当前类型成绩录入");
 
         // 修改计划中所有监考员状态为已完成
         planInvigilateMapper.update(new LambdaUpdateWrapper<PlanInvigilateDO>()
-                .in(PlanInvigilateDO::getExamPlanId, distinctPlanIds)
-                .set(PlanInvigilateDO::getInvigilateStatus, InvigilateStatusEnum.FINISHED.getValue()));
+            .in(PlanInvigilateDO::getExamPlanId, distinctPlanIds)
+            .set(PlanInvigilateDO::getInvigilateStatus, InvigilateStatusEnum.FINISHED.getValue()));
 
         // 构建 recordId -> score 映射
         Map<Long, Integer> scoreMap = scoresList.stream()
-                .collect(Collectors.toMap(ScoreItemReq::getRecordId, ScoreItemReq::getScores));
+            .collect(Collectors.toMap(ScoreItemReq::getRecordId, ScoreItemReq::getScores));
 
         // 遍历考试记录：按 recordId 设置对应成绩 + 计算合格状态
         examRecordsDOS.forEach(record -> {
@@ -443,24 +435,24 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
             // 获取计划考试类型
             CheckPlanHasExamTypeDTO planType = planTypeMap.get(record.getPlanId());
             boolean isOperRequired = planType != null && ProjectHasExamTypeEnum.YES.getValue()
-                    .equals(planType.getIsOperation());
+                .equals(planType.getIsOperation());
             boolean isRoadRequired = planType != null && ProjectHasExamTypeEnum.YES.getValue()
-                    .equals(planType.getIsRoad());
+                .equals(planType.getIsRoad());
 
             // 判断是否合格
             boolean passed = true;
             if (record.getExamScores() == null || record.getExamScores() < ExamRecordConstants.PASSING_SCORE)
                 passed = false;
             if (isOperRequired && (record.getOperScores() == null || record
-                    .getOperScores() < ExamRecordConstants.PASSING_SCORE))
+                .getOperScores() < ExamRecordConstants.PASSING_SCORE))
                 passed = false;
             if (isRoadRequired && (record.getRoadScores() == null || record
-                    .getRoadScores() < ExamRecordConstants.PASSING_SCORE))
+                .getRoadScores() < ExamRecordConstants.PASSING_SCORE))
                 passed = false;
 
             record.setExamResultStatus(passed
-                    ? ExamResultStatusEnum.PASSED.getValue()
-                    : ExamResultStatusEnum.FAILED.getValue());
+                ? ExamResultStatusEnum.PASSED.getValue()
+                : ExamResultStatusEnum.FAILED.getValue());
         });
 
         // 批量更新成绩 + 合格状态
@@ -493,13 +485,13 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
         // planId -> DTO
         Map<Long, CheckPlanHasExamTypeDTO> planExamTypeMap = planExamTypes.stream()
-                .collect(Collectors.toMap(CheckPlanHasExamTypeDTO::getPlanId, Function.identity()));
+            .collect(Collectors.toMap(CheckPlanHasExamTypeDTO::getPlanId, Function.identity()));
 
         // 3 实操成绩未录入
         List<Long> noEntryOperScoresList = examRecordsDOS.stream().filter(record -> {
             CheckPlanHasExamTypeDTO plan = planExamTypeMap.get(record.getPlanId());
             return plan != null && ProjectHasExamTypeEnum.YES.getValue()
-                    .equals(plan.getIsOperation()) && ExamScoreEntryStatusEnum.NO_ENTRY.getValue()
+                .equals(plan.getIsOperation()) && ExamScoreEntryStatusEnum.NO_ENTRY.getValue()
                     .equals(record.getOperInputStatus());
         }).map(ExamRecordsDO::getCandidateId).toList();
 
@@ -509,7 +501,7 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
         List<Long> noEntryRoadScoresList = examRecordsDOS.stream().filter(record -> {
             CheckPlanHasExamTypeDTO plan = planExamTypeMap.get(record.getPlanId());
             return plan != null && ProjectHasExamTypeEnum.YES.getValue()
-                    .equals(plan.getIsRoad()) && ExamScoreEntryStatusEnum.NO_ENTRY.getValue()
+                .equals(plan.getIsRoad()) && ExamScoreEntryStatusEnum.NO_ENTRY.getValue()
                     .equals(record.getRoadInputStatus());
         }).map(ExamRecordsDO::getCandidateId).toList();
 
@@ -522,11 +514,11 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
                 return true;
             }
             if (plan != null && ProjectHasExamTypeEnum.YES.getValue().equals(plan.getIsOperation()) && record
-                    .getOperScores() < ExamRecordConstants.PASSING_SCORE) {
+                .getOperScores() < ExamRecordConstants.PASSING_SCORE) {
                 return true;
             }
             if (plan != null && ProjectHasExamTypeEnum.YES.getValue().equals(plan.getIsRoad()) && record
-                    .getRoadScores() < ExamRecordConstants.PASSING_SCORE) {
+                .getRoadScores() < ExamRecordConstants.PASSING_SCORE) {
                 return true;
             }
             return false;
@@ -536,9 +528,9 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
         // 6 是否已生成证书
         List<Long> hasCertificateList = examRecordsDOS.stream()
-                .filter(record -> ExamRecprdsHasCertofocateEnum.YES.getValue().equals(record.getIsCertificateGenerated()))
-                .map(ExamRecordsDO::getCandidateId)
-                .toList();
+            .filter(record -> ExamRecprdsHasCertofocateEnum.YES.getValue().equals(record.getIsCertificateGenerated()))
+            .map(ExamRecordsDO::getCandidateId)
+            .toList();
 
         throwWithUserNames(hasCertificateList, " 已生成证书信息，无法再次生成");
 
@@ -560,21 +552,19 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
             // 1. 获取焊接项目记录
             List<Long> weldingRecordIds = examRecordCertificateDTOList.stream()
-                    .filter(item -> isWeldingProject(item.getProjectId()))
-                    .map(ExamRecordCertificateDTO::getId)
-                    .toList();
+                .filter(item -> isWeldingProject(item.getProjectId()))
+                .map(ExamRecordCertificateDTO::getId)
+                .toList();
 
             // 2. 一次性查询所有焊接项目子项目 code
             final Map<Long, List<String>> weldingCodesMap;
             if (CollUtil.isNotEmpty(weldingRecordIds)) {
                 weldingCodesMap = weldingOperScoreMapper.selectList(new LambdaQueryWrapper<WeldingOperScoreDO>()
-                                .in(WeldingOperScoreDO::getRecordId, weldingRecordIds)
-                                .select(WeldingOperScoreDO::getRecordId, WeldingOperScoreDO::getProjectCode))
-                        .stream()
-                        .collect(Collectors.groupingBy(
-                                WeldingOperScoreDO::getRecordId,
-                                Collectors.mapping(WeldingOperScoreDO::getProjectCode, Collectors.toList())
-                        ));
+                    .in(WeldingOperScoreDO::getRecordId, weldingRecordIds)
+                    .select(WeldingOperScoreDO::getRecordId, WeldingOperScoreDO::getProjectCode))
+                    .stream()
+                    .collect(Collectors.groupingBy(WeldingOperScoreDO::getRecordId, Collectors
+                        .mapping(WeldingOperScoreDO::getProjectCode, Collectors.toList())));
             } else {
                 weldingCodesMap = Collections.emptyMap();
             }
@@ -604,7 +594,10 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
                 // 处理焊接项目 code
                 if (isWeldingProject(item.getProjectId())) {
                     List<String> projectCodes = weldingCodesMap.getOrDefault(item.getId(), Collections.emptyList());
-                    String joinedCodes = projectCodes.stream().filter(StrUtil::isNotBlank).distinct().collect(Collectors.joining(","));
+                    String joinedCodes = projectCodes.stream()
+                        .filter(StrUtil::isNotBlank)
+                        .distinct()
+                        .collect(Collectors.joining(","));
                     licenseCertificateDO.setPsnlcnsItemCode(joinedCodes);
                 } else {
                     licenseCertificateDO.setPsnlcnsItemCode(item.getProjectCode());
@@ -620,8 +613,7 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
         // 修改状态
         baseMapper.update(new LambdaUpdateWrapper<ExamRecordsDO>().in(ExamRecordsDO::getId, recordIds)
-                .set(ExamRecordsDO::getIsCertificateGenerated, ExamRecprdsHasCertofocateEnum.YES.getValue()));
-
+            .set(ExamRecordsDO::getIsCertificateGenerated, ExamRecprdsHasCertofocateEnum.YES.getValue()));
 
         return Boolean.TRUE;
     }
@@ -636,8 +628,8 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
         deleteWrapper.and(w -> {
             for (ExamRecordCertificateDTO item : finalList) {
                 w.or()
-                        .eq(LicenseCertificateDO::getCandidateId, item.getCandidateId())
-                        .eq(LicenseCertificateDO::getPsnlcnsItemCode, item.getProjectCode());
+                    .eq(LicenseCertificateDO::getCandidateId, item.getCandidateId())
+                    .eq(LicenseCertificateDO::getPsnlcnsItemCode, item.getProjectCode());
             }
         });
         return deleteWrapper;
@@ -661,8 +653,8 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
         // 3. 查询证书信息（必须已生成）
         List<LicenseCertificateDO> certList = licenseCertificateMapper
-                .selectList(new LambdaQueryWrapper<LicenseCertificateDO>()
-                        .in(LicenseCertificateDO::getRecordId, recordIds));
+            .selectList(new LambdaQueryWrapper<LicenseCertificateDO>()
+                .in(LicenseCertificateDO::getRecordId, recordIds));
         ValidationUtils.throwIfEmpty(certList, "未查询到可导出的资格证信息");
 
         // 4. 构造 userId + planId 对
@@ -680,16 +672,16 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
         // key：candidateId_planId → className
         Map<String, String> classNameMap = enrollWithClassList.stream()
-                .collect(Collectors.toMap(e -> e.getCandidateId() + "_" + e.getPlanId(), EnrollWithClassDTO::getClassName, (
-                        a,
-                        b) -> a));
+            .collect(Collectors.toMap(e -> e.getCandidateId() + "_" + e.getPlanId(), EnrollWithClassDTO::getClassName, (
+                                                                                                                        a,
+                                                                                                                        b) -> a));
 
         // 6. 按班级分组证书
         Map<String, List<LicenseCertificateDO>> certByClass = certList.stream().collect(Collectors.groupingBy(cert -> {
             ExamRecordsDO record = examRecordsDOS.stream()
-                    .filter(r -> r.getId().equals(cert.getRecordId()))
-                    .findFirst()
-                    .orElseThrow();
+                .filter(r -> r.getId().equals(cert.getRecordId()))
+                .findFirst()
+                .orElseThrow();
 
             return classNameMap.get(record.getCandidateId() + "_" + record.getPlanId());
         }));
@@ -729,7 +721,7 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
                     try (InputStream in = new URL(cert.getFacePhoto()).openStream()) {
                         ZipEntry photoEntry = new ZipEntry(picsDir + aesWithHMAC.verifyAndDecrypt(cert
-                                .getIdcardNo()) + LicenseCertificateConstant.FACE_PHOTO_SUFFIX);
+                            .getIdcardNo()) + LicenseCertificateConstant.FACE_PHOTO_SUFFIX);
                         zos.putNextEntry(photoEntry);
                         byte[] buffer = new byte[8192];
                         int len;
@@ -755,7 +747,7 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_OCTET_STREAM);
         headers.setContentDispositionFormData(LicenseCertificateConstant.ATTACHMENT, URLEncoder
-                .encode(zipName, StandardCharsets.UTF_8));
+            .encode(zipName, StandardCharsets.UTF_8));
 
         return new ResponseEntity<>(baos.toByteArray(), headers, HttpStatus.OK);
     }
@@ -777,7 +769,7 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
         // 查询
         IPage<ExamRecordDTO> page = baseMapper.getCandidateExamRecordPage(new Page<>(pageQuery.getPage(), pageQuery
-                .getSize()), queryWrapper, roadExamTypeId);
+            .getSize()), queryWrapper, roadExamTypeId);
         // 将查询结果转换成 PageResp 对象
         PageResp<ExamRecordsResp> pageResp = PageResp.build(page, super.getListClass());
 
@@ -800,21 +792,17 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
         ValidationUtils.throwIfEmpty(reqList, "未录入任何焊接项目的实操成绩");
 
         /* ================= 1. 批量更新焊接项目实操成绩 ================= */
-        List<WeldingOperScoreDO> updateScores = reqList.stream()
-                .map(req -> {
-                    WeldingOperScoreDO score = new WeldingOperScoreDO();
-                    score.setId(req.getWeldingOperScoreId());
-                    score.setOperScore(req.getOperScore());
-                    return score;
-                })
-                .toList();
+        List<WeldingOperScoreDO> updateScores = reqList.stream().map(req -> {
+            WeldingOperScoreDO score = new WeldingOperScoreDO();
+            score.setId(req.getWeldingOperScoreId());
+            score.setOperScore(req.getOperScore());
+            return score;
+        }).toList();
 
         weldingOperScoreMapper.updateBatchById(updateScores);
 
         /* ================= 2. recordId 去重 ================= */
-        Set<Long> recordIds = reqList.stream()
-                .map(InputWeldingScoreReq::getRecordId)
-                .collect(Collectors.toSet());
+        Set<Long> recordIds = reqList.stream().map(InputWeldingScoreReq::getRecordId).collect(Collectors.toSet());
 
         /* ================= 3. 批量查询考试记录 ================= */
         List<ExamRecordsDO> examRecordsList = baseMapper.selectBatchIds(recordIds);
@@ -823,16 +811,12 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
         }
 
         /* ================= 4. 一次性查询所有焊接成绩 ================= */
-        List<WeldingOperScoreDO> allWeldingScores =
-                weldingOperScoreMapper.selectList(
-                        new LambdaQueryWrapper<WeldingOperScoreDO>()
-                                .in(WeldingOperScoreDO::getRecordId, recordIds)
-                );
+        List<WeldingOperScoreDO> allWeldingScores = weldingOperScoreMapper
+            .selectList(new LambdaQueryWrapper<WeldingOperScoreDO>().in(WeldingOperScoreDO::getRecordId, recordIds));
 
         // recordId -> 焊接成绩列表
-        Map<Long, List<WeldingOperScoreDO>> scoreMap =
-                allWeldingScores.stream()
-                        .collect(Collectors.groupingBy(WeldingOperScoreDO::getRecordId));
+        Map<Long, List<WeldingOperScoreDO>> scoreMap = allWeldingScores.stream()
+            .collect(Collectors.groupingBy(WeldingOperScoreDO::getRecordId));
 
         /* ================= 5. 批量计算考试结果 ================= */
         List<ExamRecordsDO> updateRecords = new ArrayList<>();
@@ -846,7 +830,7 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
             // 所有焊接实操都 >= 合格线 才算通过
             boolean operPassed = weldingScores.stream()
-                    .allMatch(score -> score.getOperScore() >= ExamRecordConstants.PASSING_SCORE);
+                .allMatch(score -> score.getOperScore() >= ExamRecordConstants.PASSING_SCORE);
 
             ExamRecordsDO update = new ExamRecordsDO();
             update.setId(record.getId());
@@ -893,9 +877,9 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
         // 检查是否存在没参加理论考试的
         List<Long> notExamCandidateIds = examRecordsDOS.stream()
-                .filter(record -> ExamRecprdsHasCertofocateEnum.YES.getValue().equals(record.getIsCertificateGenerated()))
-                .map(ExamRecordsDO::getCandidateId)
-                .toList();
+            .filter(record -> ExamRecprdsHasCertofocateEnum.YES.getValue().equals(record.getIsCertificateGenerated()))
+            .map(ExamRecordsDO::getCandidateId)
+            .toList();
 
         if (!notExamCandidateIds.isEmpty()) {
             List<UserDO> users = userMapper.selectByIds(notExamCandidateIds);
@@ -905,9 +889,9 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
         // 检查是否已生成证书
         List<Long> candidateIds = examRecordsDOS.stream()
-                .filter(record -> ExamRecprdsHasCertofocateEnum.YES.getValue().equals(record.getIsCertificateGenerated()))
-                .map(ExamRecordsDO::getCandidateId)
-                .toList();
+            .filter(record -> ExamRecprdsHasCertofocateEnum.YES.getValue().equals(record.getIsCertificateGenerated()))
+            .map(ExamRecordsDO::getCandidateId)
+            .toList();
 
         if (!candidateIds.isEmpty()) {
             List<UserDO> users = userMapper.selectByIds(candidateIds);
@@ -922,10 +906,10 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
         // 提前构建 planId -> CheckPlanHasExamTypeDTO 映射，提高查找效率
         Map<Long, CheckPlanHasExamTypeDTO> planTypeMap = planExamTypes.stream()
-                .collect(Collectors.toMap(CheckPlanHasExamTypeDTO::getPlanId, dto -> dto));
+            .collect(Collectors.toMap(CheckPlanHasExamTypeDTO::getPlanId, dto -> dto));
 
         Map<Long, Integer> scoreMap = scoresList.stream()
-                .collect(Collectors.toMap(ScoreItemReq::getRecordId, ScoreItemReq::getScores));
+            .collect(Collectors.toMap(ScoreItemReq::getRecordId, ScoreItemReq::getScores));
 
         examRecordsDOS.forEach(record -> {
             Integer recordScore = scoreMap.get(record.getId());
@@ -936,24 +920,24 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
             // 获取计划考试类型
             CheckPlanHasExamTypeDTO planType = planTypeMap.get(record.getPlanId());
             boolean isOperRequired = planType != null && ProjectHasExamTypeEnum.YES.getValue()
-                    .equals(planType.getIsOperation());
+                .equals(planType.getIsOperation());
             boolean isRoadRequired = planType != null && ProjectHasExamTypeEnum.YES.getValue()
-                    .equals(planType.getIsRoad());
+                .equals(planType.getIsRoad());
 
             // 判断是否合格
             boolean passed = true;
             if (record.getExamScores() == null || record.getExamScores() < ExamRecordConstants.PASSING_SCORE)
                 passed = false;
             if (isOperRequired && (record.getOperScores() == null || record
-                    .getOperScores() < ExamRecordConstants.PASSING_SCORE))
+                .getOperScores() < ExamRecordConstants.PASSING_SCORE))
                 passed = false;
             if (isRoadRequired && (record.getRoadScores() == null || record
-                    .getRoadScores() < ExamRecordConstants.PASSING_SCORE))
+                .getRoadScores() < ExamRecordConstants.PASSING_SCORE))
                 passed = false;
 
             record.setExamResultStatus(passed
-                    ? ExamResultStatusEnum.PASSED.getValue()
-                    : ExamResultStatusEnum.FAILED.getValue());
+                ? ExamResultStatusEnum.PASSED.getValue()
+                : ExamResultStatusEnum.FAILED.getValue());
         });
 
         // 批量更新成绩 + 合格状态
@@ -971,7 +955,8 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
      */
     @Override
     public List<ClassExamTableResp> getClassExamTableList(Long planId) {
-        List<ExamRecordDTO> list = baseMapper.getClassExamTableList(planId, roadExamTypeId, metalProjectId, nonmetalProjectId);
+        List<ExamRecordDTO> list = baseMapper
+            .getClassExamTableList(planId, roadExamTypeId, metalProjectId, nonmetalProjectId);
         ExamPlanDO examPlanDO = examPlanMapper.selectById(planId);
         Long examProjectId = examPlanDO.getExamProjectId();
         boolean isWeldingProject = metalProjectId.equals(examProjectId) || nonmetalProjectId.equals(examProjectId);
@@ -979,78 +964,68 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
         if (CollUtil.isEmpty(list)) {
             return Collections.emptyList();
         }
-        Map<String, List<ExamRecordDTO>> classMap =
-                list.stream()
-                        .collect(Collectors.groupingBy(
-                                r -> StrUtil.blankToDefault(r.getClassName(), "未分班")
-                        ));
+        Map<String, List<ExamRecordDTO>> classMap = list.stream()
+            .collect(Collectors.groupingBy(r -> StrUtil.blankToDefault(r.getClassName(), "未分班")));
 
         // 汇总每个班级
-        List<ClassExamTableResp> result = classMap.entrySet()
-                .stream()
-                .map(entry -> {
-                    String className = entry.getKey();
-                    List<ExamRecordDTO> records = entry.getValue();
+        List<ClassExamTableResp> result = classMap.entrySet().stream().map(entry -> {
+            String className = entry.getKey();
+            List<ExamRecordDTO> records = entry.getValue();
 
-                    long passCount = records.stream()
-                            .filter(r -> Objects.equals(r.getExamResultStatus(), ExamResultStatusEnum.PASSED.getValue()))
-                            .count();
+            long passCount = records.stream()
+                .filter(r -> Objects.equals(r.getExamResultStatus(), ExamResultStatusEnum.PASSED.getValue()))
+                .count();
 
-                    long failCount = records.stream()
-                            .filter(r -> Objects.equals(r.getExamResultStatus(), ExamResultStatusEnum.FAILED.getValue()))
-                            .count();
+            long failCount = records.stream()
+                .filter(r -> Objects.equals(r.getExamResultStatus(), ExamResultStatusEnum.FAILED.getValue()))
+                .count();
 
-                    ClassExamTableResp resp = new ClassExamTableResp();
-                    resp.setClassName(className);
-                    resp.setPassCount(passCount);
-                    resp.setFailCount(failCount);
-                    if (!ObjectUtils.isEmpty(records)) {
-                        resp.setRecords(records.stream().map(item -> {
-                            ExamRecordsResp examRecordsResp = new ExamRecordsResp();
-                            examRecordsResp.setId(item.getId());
-                            examRecordsResp.setClassName(item.getClassName());
-                            examRecordsResp.setExamScores(item.getExamScores());
-                            examRecordsResp.setExamResultStatus(item.getExamResultStatus());
-                            examRecordsResp.setOperInputStatus(item.getOperInputStatus());
-                            examRecordsResp.setOperScores(item.getOperScores());
-                            examRecordsResp.setPlanId(item.getPlanId());
-                            examRecordsResp.setRoadScores(item.getRoadScores());
-                            examRecordsResp.setRoadInputStatus(item.getRoadInputStatus());
-                            examRecordsResp.setCandidateId(item.getCandidateId());
-                            examRecordsResp.setCandidateName(item.getCandidateName());
-                            examRecordsResp.setSeatId(item.getSeatId());
-                            examRecordsResp.setIsRoad(item.getIsRoad());
-                            examRecordsResp.setProjectId(item.getProjectId());
-                            // 解密身份证号
-                            examRecordsResp.setUsername(aesWithHMAC.verifyAndDecrypt(item.getUsername()));
-                            // 如果是焊接项目，解析 JSON 成对象列表
-                            if (isWeldingProject && !StringUtils.isEmpty(item.getWeldingOperScores())) {
-                                examRecordsResp.setWeldingOperScoreVoList(
-                                        JSONUtil.toList(item.getWeldingOperScores(), WeldingOperScoreVO.class)
-                                );
-                            }
-                            return examRecordsResp;
-                        }).toList());
-
+            ClassExamTableResp resp = new ClassExamTableResp();
+            resp.setClassName(className);
+            resp.setPassCount(passCount);
+            resp.setFailCount(failCount);
+            if (!ObjectUtils.isEmpty(records)) {
+                resp.setRecords(records.stream().map(item -> {
+                    ExamRecordsResp examRecordsResp = new ExamRecordsResp();
+                    examRecordsResp.setId(item.getId());
+                    examRecordsResp.setClassName(item.getClassName());
+                    examRecordsResp.setExamScores(item.getExamScores());
+                    examRecordsResp.setExamResultStatus(item.getExamResultStatus());
+                    examRecordsResp.setOperInputStatus(item.getOperInputStatus());
+                    examRecordsResp.setOperScores(item.getOperScores());
+                    examRecordsResp.setPlanId(item.getPlanId());
+                    examRecordsResp.setRoadScores(item.getRoadScores());
+                    examRecordsResp.setRoadInputStatus(item.getRoadInputStatus());
+                    examRecordsResp.setCandidateId(item.getCandidateId());
+                    examRecordsResp.setCandidateName(item.getCandidateName());
+                    examRecordsResp.setSeatId(item.getSeatId());
+                    examRecordsResp.setIsRoad(item.getIsRoad());
+                    examRecordsResp.setProjectId(item.getProjectId());
+                    // 解密身份证号
+                    examRecordsResp.setUsername(aesWithHMAC.verifyAndDecrypt(item.getUsername()));
+                    // 如果是焊接项目，解析 JSON 成对象列表
+                    if (isWeldingProject && !StringUtils.isEmpty(item.getWeldingOperScores())) {
+                        examRecordsResp.setWeldingOperScoreVoList(JSONUtil.toList(item
+                            .getWeldingOperScores(), WeldingOperScoreVO.class));
                     }
-                    return resp;
-                })
-                // 可选：按班级名排序
-                .sorted(Comparator.comparing(
-                        resp -> {
-                            List<ExamRecordsResp> records = resp.getRecords();
-                            if (ObjectUtil.isEmpty(records)) {
-                                return Integer.MAX_VALUE;
-                            }
-                            return Optional.ofNullable(records.get(0).getSeatId())
-                                    .orElse(Integer.MAX_VALUE);
-                        }
-                ))
-                .collect(Collectors.toList());
+                    return examRecordsResp;
+                }).toList());
+
+            }
+            return resp;
+        })
+            // 可选：按班级名排序
+            .sorted(Comparator.comparing(resp -> {
+                List<ExamRecordsResp> records = resp.getRecords();
+                if (ObjectUtil.isEmpty(records)) {
+                    return Integer.MAX_VALUE;
+                }
+                return Optional.ofNullable(records.get(0).getSeatId()).orElse(Integer.MAX_VALUE);
+            }))
+            .collect(Collectors.toList());
 
         return result;
     }
-
 
     private String generateClassXml(List<LicenseCertificateDO> certList) {
         StringBuilder sb = new StringBuilder();
@@ -1065,21 +1040,21 @@ public class ExamRecordsServiceImpl extends BaseServiceImpl<ExamRecordsMapper, E
 
     private String generateCertificateXml(LicenseCertificateDO cert) {
         return LicenseCertificateConstant.XML_CONTENT.formatted(safe(cert.getDatasource()), safe(cert
-                        .getInfoinputorg()),
-                // PersonInfo
-                safe(cert.getPsnName()), safe(aesWithHMAC.verifyAndDecrypt(cert.getIdcardNo())), safe(cert
-                        .getOriginalComName()), safe(cert.getComName()), safe(cert.getApplyType()), formatDate(cert
-                        .getApplyDate(), "yyyy/MM/dd"), safe(cert.getIsVerify()), safe(cert.getIsOpr()),
+            .getInfoinputorg()),
+            // PersonInfo
+            safe(cert.getPsnName()), safe(aesWithHMAC.verifyAndDecrypt(cert.getIdcardNo())), safe(cert
+                .getOriginalComName()), safe(cert.getComName()), safe(cert.getApplyType()), formatDate(cert
+                    .getApplyDate(), "yyyy/MM/dd"), safe(cert.getIsVerify()), safe(cert.getIsOpr()),
 
-                // PsnLcnsGeneral
-                safe(cert.getLcnsKind()), safe(cert.getLcnsCategory()), safe(cert.getLcnsNo()), formatDate(cert
-                        .getCertDate(), "yyyy/MM/dd"), formatDate(cert.getAuthDate(), "yyyy/MM/dd"), formatDate(cert
-                        .getEndDate(), "yyyy-MM-dd"), safe(cert.getOriginalAuthCom()), safe(cert.getAuthCom()), safe(cert
+            // PsnLcnsGeneral
+            safe(cert.getLcnsKind()), safe(cert.getLcnsCategory()), safe(cert.getLcnsNo()), formatDate(cert
+                .getCertDate(), "yyyy/MM/dd"), formatDate(cert.getAuthDate(), "yyyy/MM/dd"), formatDate(cert
+                    .getEndDate(), "yyyy-MM-dd"), safe(cert.getOriginalAuthCom()), safe(cert.getAuthCom()), safe(cert
                         .getRemark()), safe(cert.getState()),
 
-                // PsnLcnsDetail
-                safe(cert.getPsnlcnsItem()), safe(cert.getPsnlcnsItemCode()), safe(cert.getPermitScope()), safe(cert
-                        .getDetailRemark()), safe(cert.getDetailState()));
+            // PsnLcnsDetail
+            safe(cert.getPsnlcnsItem()), safe(cert.getPsnlcnsItemCode()), safe(cert.getPermitScope()), safe(cert
+                .getDetailRemark()), safe(cert.getDetailState()));
     }
 
     private String safe(Object val) {
